@startuml
title Aplicativo de Serviço de Atendimento ao Cliente (SAC)

class Pessoa {
  - nome : String
  - email : String
  - telefone : String
  - endereco : String
  + atualizarDados() : void
  + visualizarDados() : void
}

class Cliente {
  - cpf : String
  + abrirChamado() : void
  + realizarAvaliacao() : void
  + visualizarChamados() : void
  + atualizarDados() : void
}

class Empresa {
  - cnpj : String
  + cadastrarDepartamento() : void
  + listarDepartamentos() : void
  + atualizarDados() : void
  + removerDepartamento() : void
}

class Atendente {
  - nivelAcesso : String
  - departamento : Departamento
  + responderChamado() : void
  + encerrarChamado() : void
  + reabrirChamado() : void
  + registrarAtendimento() : void
}

class Chamado {
  - titulo : String
  - descricao : String
  - status : String
  - dataAbertura : Date
  - dataFechamento : Date
  - prioridade : Prioridade
  - cliente : Cliente
  + adicionarComentario() : void
  + atribuirAtendimento() : void
  + alterarStatus() : void
  + exibirDetalhes() : void
}

class Prioridade {
  - nome : String
  - descricao : String
  - tempoMaximoRespostaHoras : int
  - tempoMaximoResolucaoHoras : int
  + calcularPrazo() : DateTime
  + exibirRegras() : void
}

class Departamento {
  - nome : String
  - descricao : String
  - telefone : String
  + listarAtendentes() : void
  + contarChamados() : int
  + adicionarAtendente() : void
  + removerAtendente() : void
}

class Atendimento {
  - dataInicio : DateTime
  - dataFim : DateTime
  - observacoes : String
  - chamado : Chamado
  - atendente : Atendente
  + iniciarAtendimento() : void
  + finalizarAtendimento() : void
  + registrarObservacao() : void
  + calcularDuracao() : void
}

class AtendenteEmpresa {
  - empresa : Empresa
  - atendente : Atendente
}

class Avaliacao {
  - nota : int
  - comentario : String
  - dataAvaliacao : Date
  - cliente : Cliente
  - atendimento : Atendimento
  + registrarAvaliacao() : void
  + exibirAvaliacao() : void
  + editarAvaliacao() : void
  + excluirAvaliacao() : void
}

' ---- RELACIONAMENTOS ----
Cliente  *-->  Chamado : "1..N"
Cliente  *-->  Avaliacao : "1..N"
Avaliacao  <--*  Atendimento : "1..1"
Atendente  <--*  Departamento : "1..N"
Atendimento  <--*  Chamado : "1..1"
Atendimento <--* Atendente : "1..N"
AtendenteEmpresa  <--*  Atendente : "N..N"
AtendenteEmpresa  <--*  Empresa : "N..N"
Chamado  <--*  Prioridade : "1..N"
Pessoa <|-- Cliente : "1..1"
Pessoa <|-- Atendente : "1..1"
Pessoa <|-- Empresa : "1..1"

@enduml
